logs/fblib.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fblib'...
Listing './lib/python3.5/site-packages/fblib-0.9.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Compiling './lib/python3.5/site-packages/requests/packages/chardet/chardistribution.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/chardistribution.py", line 48
    self._mDone = constants.False # If this flag is set to constants.True, detection is done and conclusion has been made
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/requests/packages/chardet/charsetgroupprober.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/charsetgroupprober.py", line 44
    prober.active = constants.True
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/requests/packages/chardet/constants.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/constants.py", line 46
    False = __builtin__.False
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/requests/packages/chardet/escprober.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/escprober.py", line 48
    codingSM.active = constants.True
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/requests/packages/chardet/jpcntx.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/jpcntx.py", line 132
    self._mDone = constants.False # If this flag is set to constants.True, detection is done and conclusion has been made
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/requests/packages/chardet/langbulgarianmodel.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/langbulgarianmodel.py", line 218
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/requests/packages/chardet/langcyrillicmodel.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/langcyrillicmodel.py", line 287
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/requests/packages/chardet/langgreekmodel.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/langgreekmodel.py", line 215
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/requests/packages/chardet/langhebrewmodel.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/langhebrewmodel.py", line 199
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/requests/packages/chardet/langhungarianmodel.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/langhungarianmodel.py", line 215
    'keepEnglishLetter': constants.True,
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/requests/packages/chardet/langthaimodel.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/langthaimodel.py", line 198
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/requests/packages/chardet/sbcharsetprober.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/sbcharsetprober.py", line 42
    def __init__(self, model, reversed=constants.False, nameProber=None):
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/requests/packages/chardet/sbcsgroupprober.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/sbcsgroupprober.py", line 59
    logicalHebrewProber = SingleByteCharSetProber(Win1255HebrewModel, constants.False, hebrewProber)
                                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/requests/packages/chardet/universaldetector.py'...
***   File "./lib/python3.5/site-packages/requests/packages/chardet/universaldetector.py", line 51
    self.done = constants.False
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/requests/packages/chardet2'...
Listing './lib/python3.5/site-packages/requests/packages/oauthlib'...
Listing './lib/python3.5/site-packages/requests/packages/oauthlib/oauth1'...
Listing './lib/python3.5/site-packages/requests/packages/oauthlib/oauth1/rfc5849'...
Listing './lib/python3.5/site-packages/requests/packages/oauthlib/oauth2'...
Listing './lib/python3.5/site-packages/requests/packages/oauthlib/oauth2/draft25'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests-0.14.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
